fixed nav style  on mobile

--- a/rubinaportfolio/src/App.css
+++ b/rubinaportfolio/src/App.css
@@ -105,3 +105,12 @@ aesthetic .embla__viewport {
   width: 100%;
   object-fit: cover;
 }
+
+.smolmenu {
+  /* From https://css.glass */
+  background: #8d7e7e26;
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(13px);
+  -webkit-backdrop-filter: blur(13px);
+}
